# cPredictor

./: .codeclimate.yml  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-cd.yml  model_test_cornea.yml
cPredictor/: SVM_prediction.py  __init__.py
cPredictor/tests/: SVM_prediction_test.py  cPredictor_test_model.py  cmaclp_test_model.py
cmaclp/: SVM_prediction.py  __init__.py
cmaclp/tests/: SVM_prediction_test.py  cmaclp_test.py  cmaclp_test_end_to_end.py  cmaclp_test_model.py
docs/: conf.py  index.rst  usage.rst
docs/source/: api.rst  conf.py  index.rst  instructions.rst  usage.rst
