[project]
name = "cPredictor"
version="0.5.0"
description = "Cell command line predictor"
dynamic = ["dependencies","readme","scripts"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

#[tool.setuptools.package-data]
#"cma.data" = ["*.csv", "*.h5ad"]

[tool.bumpver]
current_version = "0.5.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"setup.py" = ["{version}"]

